--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -46,4 +46,6 @@
     <string name="summary_ringForEach">每一条通知都将会有提示音</string>
     <string name="search">搜索</string>
     <string name="positive">重置为正常优先级</string>
+    <string name="hail_installed">唤醒冻结的app</string>
+    <string name="summary_hailInstalled">如果您安装了“雹”，请勾选</string>
 </resources>
