--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,6 @@
     <string name="summary_ringForEach">Alert for every notice</string>
     <string name="search">search</string>
     <string name="positive">reset to normal</string>
+    <string name="hail_installed">Wake up frozen apps</string>
+    <string name="summary_hailInstalled">If you install app Hail, please check it</string>
 </resources>
